--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <p>If you are the owner of BrandCrunchBot, please click the button below to sign in.</p>
 
-<p>If you are not the owner of BrandCrunchBot, you probably should not be here.</p>
+<p>If you are not the owner of BrandCrunchBot, you probably should not be here...</p>
 
 <% if user_signed_in? %>
  <div> Welcome <%= current_user.email %> </div>
