--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Brandcrunch</title>
+    <title>Officerobot</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <%# <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %1> %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%# <p class="notice"><%= notice %1></p> %>
+    <%# <p class="alert"><%= alert %1></p> %>
     <%= yield %>
+    <% user_management_page =  request.env['REQUEST_PATH'].match?(/sign_in|sign_up/) %>
+    <% not_yet_logged_in = current_user.nil? %>
+    <% unless user_management_page || not_yet_logged_in %>
+      <br>
+      <%= button_to(
+        "Log Out",
+        destroy_user_session_path,
+        method: :delete,
+        :data => { :no_turbolink => true }
+      ) %>
+<% end %>
   </body>
 </html>
