--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,15 @@
     <%# <p class="notice"><%= notice %1></p> %>
     <%# <p class="alert"><%= alert %1></p> %>
     <%= yield %>
-    <% user_management_page =  request.env['REQUEST_PATH'].match?(/sign_in|sign_up/) %>
+    <% user_management_page = request.env['REQUEST_PATH'].match?(/sign_in|sign_up/) %>
     <% not_yet_logged_in = current_user.nil? %>
     <% unless user_management_page || not_yet_logged_in %>
       <br>
       <%= button_to(
-        "Log Out",
+        'Log Out',
         destroy_user_session_path,
         method: :delete,
-        :data => { :no_turbolink => true }
+        data: { no_turbolink: true }
       ) %>
 <% end %>
   </body>
